# datasette-write-ui

./: .gitignore  Justfile  Makefile  README.md  package-lock.json  package.json  pyproject.toml  setup.py  tsconfig.json
.github/workflows/: test.yml
datasette_write_ui/: __init__.py  config.ts  plugin-api.ts  routes.py  table.js  table.ts  write-api.ts
datasette_write_ui/static/: table.css  table.min.js
datasette_write_ui/templates/: edit.html  row.html  table.html
tests/: students.sql  test_datasette_write_ui.py
